Animated Timer on Panel. Data integrity managed by conroller. Start/Stop Button implemented.

--- a/src/main/resources/database.properties
+++ b/src/main/resources/database.properties
@@ -1,4 +1,7 @@
+//jdbcUrl = jdbc:postgresql:forte
+//jdbcDriver = org.postgresql.Driver
+
 jdbcUrl = jdbc:sqlite:forte.db
 jdbcDriver = org.sqlite.JDBC
-jdbcUsername = "username"
-jdbcPassword = "password
+jdbcUsername = postgres
+jdbcPassword = devpass
