--- a/gradle.properties
+++ b/gradle.properties
@@ -1,2 +1,6 @@
-kotlin.code.style=official
-exposed_version = 0.25.1
+kotlinVersion = 1.3.72
+exposedVersion = 0.25.1
+logbackVersion = 1.2.3
+ktorVersion = 1.5.0
+
+kotlin.code.style = official
