--- a/gradle.properties
+++ b/gradle.properties
@@ -4,3 +4,4 @@ logbackVersion = 1.2.3
 ktorVersion = 1.5.0
 kotlin.code.style = official
 koinVersion = 2.2.2
+mainClassName = de.snickit.forte.ForteApp
